# proof_args_zk

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/proof_args_zk/: gkr.py  low_degree_test.py  merkle_tree.py  multivariate_lagrange_interpolation.py  relaxed_polynomial_commitment_scheme.py  sum_check_protocol.py  univariate_lagrange_interpolation.py  utils.py
tests/: test_gkr.py  test_low_degree_test.py  test_merkle_tree.py  test_multivariate_lagrange_interpolation.py  test_relaxed_polynomial_commitment_scheme.py  test_sum_check_protocol.py  test_univariate_lagrange_interpolation.py  test_utils.py
