[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proof_args_zk"
version = "0.0.1"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
